--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "alertifyjs": "^1.13.1",
     "axios": "^1.6.2",
+    "lucide-react": "^0.292.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-indexed-db": "^2.0.1",
