--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "alertifyjs": "^1.13.1",
     "axios": "^1.6.2",
     "lucide-react": "^0.292.0",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
+    "react-datepicker": "^4.23.0",
     "react-dom": "^18.2.0",
     "react-indexed-db": "^2.0.1",
     "react-router-dom": "^6.18.0",
